# score-vfx-template

./: CMakeLists.txt  README.md  addon.json  init.sh  release.sh  score_addon_my_vfx.hpp  score_addon_videomapping.cpp  score_addon_videomapping.hpp
MyVfx/: Executor.hpp  Metadata.hpp  Node.cpp  Node.hpp  Process.cpp
Videomapping/: Executor.cpp  Executor.hpp  Layer.hpp  Metadata.hpp  Node.cpp  Node.hpp  Process.cpp  Process.hpp
